--- a/Css/style.css
+++ b/Css/style.css
@@ -3,118 +3,91 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
+  
+}
+header 
+{
+ width:100%;
+ height:5em;
+ background-color:	#101010;
+}
+header ul 
+{
+    display:inline-flex;
+    position:absolute;
+    right:7%;
+    top:-4.5%;
+    
+}
+header ul li 
+{
+    list-style:none;
+    margin:5em;
+  
+}
+header ul li a 
+{
+    color:#2418B9;
+    text-decoration:none;
+}
+header ul li a:hover
+{
+    color:white;
+    text-decoration:none;
+    
 }
 body
 {
-    overflow:visible;
+  
+    background-position-x: center;
+    background-color:	#101010;
+    
+ 
+  
 }
-.appcontainer
+.logo
 {
     position:absolute;
-    width:98%;
-    height:60em;
-
-    left:1%;
-    top:0.5%;
-    border-radius:0.5em;
-    display:inline-flex;
-
-}
-.app
-{
-    position:absolute;
-    width:90%;
-    height:50em;
-
-    left:6%;
-    top:15%;
-    border-radius:0.5em;
-    display:inline-flex;
-    flex-wrap: wrap;
-    overflow: scroll;
-
-
-
-}
-.game
-{
-    width:15em;
-    height:15em;
-    background-color:beige;
-    margin-top:1em;
-    margin-left:5em;
-border-radius:0.5em;
-border: 2px solid orange;
-text-align: center;
-}
-.game img 
-{
-    flex-wrap:wrap;
-    width: 15em;
-    height: 15em;
-}
-.Header
-{
-    padding-top:1.5em;
-    position:absolute;
-    left:0.5%;
-    top:3%;
-    width:99%;
-    height:10%;
-    border: 2px solid orange;
-    border-radius:0.5em;
-    text-align:center;
-    color:orange;
-   
-
-}
-
-
-.shoppingc
-{
-    position:absolute;
-    top:18%;
-    left:32.5%;
-    width:20.5em;
-    height:65%;
-    border-radius:0.5em;
-
-}
-.Shoppingb
-{
-    position:absolute;
-    right:3%;
-    top:1em;
     width:5em;
-    height:3em;
+    height:5em;
+    left:3%;
+}
+.container
+{
+    position:absolute;
+    width:80%;
+    height:85%;
+    background-color:blue;
+    top:9%;
+    right:10em;
+    border-radius:0.5em;
+    opacity:0.7;
+    background-image: url("/İmg/B.jpeg");
+    overflow-y: scroll;
+}
+.shoppingb
+{
+    position:absolute;
+    width:8em;
+    height:8.5em;
+    right:1%;
+    top:-4%;
 }
 .info
 {
     position:absolute;
-    color:orange;
-    right:7%;
-    top:5%;
-    font-weight: bolder;
-    font-size:large;
-   width:2em;
-    border:2px solid orange;
+    right:4%;
+    top:1.4%;
+    color:green;
+    font-size:1.4em;
+    border:1px solid green; 
     border-radius:100%;
 }
-.Gta 
-{
-    text-align: center;
-}
-.gtasatinal
+.Buytext
 {
     position:absolute;
-    top:35%;
-    left:9%;
-    text-decoration: none;
-    color:orange;
-    background-color:black;
-    width:6em;
-    height:2em;
-    padding-top:0.4em;
-    padding-left:0.8em;
-    border-radius:0.5em;
+    right:3%;
+    top:5%;
+    color:white;
+    
 }
