--- a/Css/style.css
+++ b/Css/style.css
@@ -27,7 +27,7 @@ header ul li
 }
 header ul li a 
 {
-    color:#2418B9;
+    color:darkslateblue;
     text-decoration:none;
 }
 header ul li a:hover
@@ -55,11 +55,11 @@ body
 .container
 {
     position:absolute;
-    width:80%;
-    height:85%;
+    width:90%;
+    height:74%;
     background-color:blue;
-    top:9%;
-    right:10em;
+    top:14%;
+    right:6em;
     border-radius:0.5em;
     opacity:0.7;
     background-image: url("/İmg/B.jpeg");
@@ -105,7 +105,37 @@ body
     width:20em;
     height:20em;
     background-color:gray;
-    margin-left:1em;
+    margin-left:1.2em;
     margin-top:2em;
+}
+.game img 
+{
+    width:18em;
+    height:15em;
+    margin-left:1em;
+    margin-top:1em;
+    border-radius:0.5em;
+    padding-bottom:1em;
+}
+.Buy 
+{
 
+    margin-top:10em;
+    margin-left:7.3em;
+    text-decoration: none;
+    border-radius:0.5em;
+    padding:0.5em;
+    background-color:darkslateblue;
+    color:white;
+}
+.Buy:hover
+{
+
+    margin-top:10em;
+    margin-left:7.3em;
+    text-decoration: none;
+    border-radius:0.5em;
+    padding:0.5em;
+    background-color:white;
+    color:green;
 }
