--- a/Css/style.css
+++ b/Css/style.css
@@ -119,7 +119,7 @@ body
 {
     position:absolute;
     width:30%;
-    height:60%;
+    height:80%;
     border:1px solid black;
     color:black;
     background-color:white;
@@ -130,14 +130,16 @@ background-size: cover;
     text-align: center;
 
 }
-.fatura1 h2 
+.adresiniz
 {
-    margin-top:2em;
+    position: absolute;
+    top:3em;
+    left:39%;
 }
 .satılan
 {
     position:absolute;
-    top:32%;
+    top:36%;
     left:36.5%;
 }
 .siparisonay
@@ -161,4 +163,26 @@ color:black;
     border-radius:"0.5em";
 text-decoration: none;
 color:white;
+}
+.list
+{
+    position:absolute;
+    width:25em;
+    height:15em;
+    top:42%;
+    left:10.5%;
+text-align: center;
+
+  
+}
+.adresonay
+{
+    
+    position:absolute;
+    width:27.9em;
+    height:7em;
+    top:20%;
+    left:10.5%;
+    overflow-y: scroll;
+    text-align: left;
 }
